Theme space Settings Text Highlight #35880

Closed
opened 2013-06-26 10:40:04 +02:00 by Cezary Kopias · 6 comments

%%%--- Operating System, Graphics card ---

- Blender version with error, and version that worked ---


- Short description of error ---

option ui elements in F6 after operator box use 3d view "Theme space Settings Text Highlight" color
they should use "User Interface Option Selected Text" like everywhere else

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

see attached image

%%%

%%%--- Operating System, Graphics card --- - Blender version with error, and version that worked --- - Short description of error --- option ui elements in F6 after operator box use 3d view "Theme space Settings Text Highlight" color they should use "User Interface Option Selected Text" like everywhere else - Steps for others to reproduce the error (preferably based on attached .blend file) --- see attached image %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%
Author

%%%hmm now its aways white

should use

THEMES>>USER INTERFACE>>OPTION>>TEXT SELECTED%%%

%%%hmm now its aways white should use THEMES>>USER INTERFACE>>OPTION>>TEXT SELECTED%%%

%%%The problem is that the same color does not work well for both the light background in the properties editor and the dark background of popups. It's a bit confusing but I now made it so that you have to tweak the "Menu Back" text colors here, these settings override a few colors of widgets in menus. Not particularly clean but we don't want to make bigger changes to the UI code now.%%%

%%%The problem is that the same color does not work well for both the light background in the properties editor and the dark background of popups. It's a bit confusing but I now made it so that you have to tweak the "Menu Back" text colors here, these settings override a few colors of widgets in menus. Not particularly clean but we don't want to make bigger changes to the UI code now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Works. Thanks for fix.%%%

%%%Works. Thanks for fix.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35880
No description provided.