Fix #35880: popup menus like F6 redo did not use the right theme color for highlighted text, it should use the UI instead of 3D view color.